Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.4, 6.3.2, 6.4.1
-
None
-
MacBook Pro 13-inch, M1, 2020, macOS 13.0.1 Ventura
-
-
5cb9df9d3 (tqtc/lts-6.2), bb68ee992 (tqtc/lts-5.15), 12c20c46b (6.4), 786e1748d (dev)
Description
Dragging an item via PinchHandler is not functional at all. Reproduced at least on macBook with touchpad.
Sample code:
import QtQuick Window { width: 640 height: 480 visible: true Rectangle { id: redRect width: 200 height: 200 color: 'red' PinchHandler { xAxis.enabled: true yAxis.enabled: true } } }
Steps to reproduce:
1. Build and run sample
2. Try to drag red rectangle in any direction by any gesture
Attachments
Issue Links
- relates to
-
QTBUG-57247 Mac OS X pinch.center and pinch.previousCenter do not update
-
- Closed
-