doc: Add note to PinchHandler.translation property about macOS trackpad

Translation doesn't happen with trackpad native gestures.

Fixes: QTBUG-109002
Change-Id: I7d42b0d737d45405732a389560a6c77624831c9e
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit 786e1748d4469c135a922a221024f3f9c421c0de)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>